# schema

./: README.md  bindkey-example.json  bindkey.json  irl.json  registry.json
bindkey/: example-bindkey.json  index.md
desig-aliases/: desig-aliases-attr-private-schema.json  desig-aliases-attr-public-schema.json  desig-aliases-attr-schema.json  desig-aliases-private-schema.json  desig-aliases-public-schema.json  index.md  update.sh
desig-aliases/examples/: desig-aliases-attr-public.json  desig-aliases-public.json  desig-aliases-rules-public.json  output.cesr  public.sh
desig-aliases/examples/my-scripts/keri/cf/: config.json
face-to-face/: example.json  index.md  rules.json  schema.json
oobi/EB5g3cx-Hr3kAtxWI_lM0hLX8CgKg4T_83Q19KPBRx8H/: index.json
oobi/EHbxC6vD0mU49geUxIfcQtTxP2tAqay7QCz3CVzfSdHz/: index.json
oobi/EMGRIPzrjqRrF9T_ka0mxs7JDpOpGDZwqb3sje4Nd6Mc/: index.json
oobi/EN6Oh5XSD5_q2Hgu-aqpdfbVepdpYpFlgz6zvJL5b_r5/: index.json
tests/: test_link.py
tools/kaslcred/: Dockerfile  Makefile  README.md  pyproject.toml
tools/kaslcred/sample_schemas/: hello-acdc-chain-schema.json  hello-admit-schema.json  hello-attend-schema.json  hello-keri-schema.json  single-schema-map.json
tools/kaslcred/src/kaslcred/: __main__.py  link.py
vLEI/: index.md
